# Elda

./: CODE_STANDARDS.md  CONTRIBUTING.md  Cargo.toml  PROJECT_STANDARDS.md  README.md  RELEASE_LOG.md  SPEC.md  USAGE.md  checklist.md  config.toml  phase.md
crates/elda-appimage/: Cargo.toml
crates/elda-appimage/src/: desktop.rs  error.rs  inspect.rs  integration.rs  lib.rs  offset.rs
crates/elda-build/: Cargo.toml
crates/elda-build/src/: ad_hoc.rs  archive.rs  binary_fetch.rs  cache_meta.rs  cargo_build.rs  cmake_build.rs  error.rs  git.rs  go_build.rs  interbuild.rs  lib.rs  make_build.rs  manifest.rs  meson_build.rs  nimble_build.rs  object_analysis.rs  payload_verify.rs  process.rs  python_build.rs  release_trust.rs  system_metadata.rs  zig_build.rs
crates/elda-build/src/archive/: release_url.rs  source.rs
crates/elda-build/src/interbuild/: aur.rs  gentoo.rs  gpkg.rs  local.rs  metadata.rs  nix.rs  shell.rs  source.rs  xbps.rs
crates/elda-build/src/system_metadata/: provider_assets.rs
crates/elda-cli/: Cargo.toml  build.rs
crates/elda-cli/src/: cli.rs  main.rs
crates/elda-cli/src/cli/: appimage_commands.rs  command_name.rs  common.rs  file_commands.rs  git_commands.rs  git_tests.rs  host_commands.rs  mod.rs  publish_commands.rs  repo_commands.rs  request_parts.rs  root.rs  styles.rs  system_commands.rs  tests.rs
crates/elda-cli/src/help/: command_help.rs  data.rs  mod.rs  render.rs  style.rs  tests.rs
crates/elda-cli/src/privilege/: command.rs  mod.rs  provider.rs  shell.rs  tests.rs
crates/elda-core/: Cargo.toml  build.rs
crates/elda-core/src/: app.rs  app_appimage.rs  app_config_queue.rs  app_confirm.rs  app_dispatch_confirm.rs  app_doctor.rs  app_ext.rs  app_failure.rs  app_flags.rs  app_git.rs  app_init.rs  app_install.rs  app_maint.rs  app_metadata_add.rs  app_model.rs  app_mutation_gate.rs  app_parse.rs  app_policy.rs  app_privilege.rs  app_recipe.rs  app_recipe_metadata.rs  app_recipe_show.rs  app_render.rs  app_render_appimage.rs  app_render_ci.rs  app_render_git.rs  app_render_host.rs  app_render_install.rs  app_render_migration.rs  app_render_misc.rs  app_render_remove.rs  app_render_state.rs  app_render_support.rs  app_render_tree.rs  app_review.rs  app_review_memory.rs  app_state.rs  app_surface_snapshots.rs  app_vendor.rs  app_version.rs  (+15 more)
crates/elda-core/src/app_ci/: artifacts.rs  ci.rs  ci_batch.rs  ci_submission.rs  forge.rs  mod.rs  model.rs  publish.rs  publish_plan.rs  qa.rs  qa_support.rs  remote_push.rs  review.rs  scheduler.rs  store.rs  workspace.rs
crates/elda-core/src/app_fs/: inspect.rs  mod.rs  recovery.rs  remove.rs  remove_gate.rs
crates/elda-core/src/app_host/: mod.rs  scan.rs  tree.rs
crates/elda-core/src/app_install/: binary_source.rs  git_picker.rs  install_confirm.rs  interbuild_review.rs  plan.rs  preflight.rs  progress.rs  progress_emit.rs  provider_choice.rs  remote_recipe.rs  report.rs  resolve.rs  review.rs  review_metadata.rs  review_recheck.rs  source_options.rs  transaction_gate.rs
crates/elda-core/src/app_migration/: mod.rs  reports.rs
crates/elda-core/src/app_profile/: apply.rs  mod.rs  mutate.rs  policy.rs  selection.rs  selection_plan.rs  selection_request.rs  set_init.rs  state.rs  system_changes.rs
crates/elda-core/src/app_publish/: diff.rs  finalize.rs  mod.rs  plan.rs  promote.rs  run.rs  sign.rs
crates/elda-core/src/app_render_extended/: config_view.rs  extras.rs  forge_view.rs  helpers.rs  inspect.rs  maint_view.rs  mod.rs  plans.rs  profile_policy.rs  qa_view.rs  repo_net.rs  repo_net_remote.rs  repo_net_remote_trust.rs  review_view.rs  state_paths.rs  transactions.rs  trigger_view.rs  vendor_view.rs
crates/elda-core/src/app_render_install/: data.rs
crates/elda-core/src/app_render_misc/: failure.rs  metadata.rs  publish.rs  recipe.rs  search.rs  session_log.rs
crates/elda-core/src/app_render_tree/: tests.rs
crates/elda-core/src/app_repo/: info.rs  info_visibility.rs  mod.rs  remote.rs  remote_add.rs  remote_bundle.rs  search.rs
crates/elda-core/src/app_surface_snapshots/: cases.rs
crates/elda-core/src/app_upgrade/: apply.rs  coherence.rs  decision.rs  downgrade.rs  mod.rs  parse.rs  plan.rs
crates/elda-core/src/cache_policy/: cleanup.rs  mod.rs  tests.rs
crates/elda-core/src/config/: submission.rs
crates/elda-core/src/tests/: build_systems.rs  ci.rs  ci_review.rs  ci_scheduler.rs  conffile_recovery.rs  config_queue.rs  downgrade.rs  flags.rs  git_ref_upgrade.rs  git_source.rs  host_publish.rs  human_output.rs  human_output_ci.rs  live_progress.rs  migration.rs  mod.rs  phase_eight.rs  provenance.rs  repo_upgrade.rs  source_vendor.rs  state.rs  upgrade_policy.rs  upgrade_runtime.rs
crates/elda-db/: Cargo.toml
crates/elda-db/src/: error.rs  layout.rs  lib.rs  lock.rs  schema.rs
crates/elda-db/src/store/: mod.rs  model.rs  mutation.rs  query.rs  tests.rs
crates/elda-git/: Cargo.toml
crates/elda-git/src/: lib.rs  releases.rs  tags.rs
crates/elda-git/src/releases/: classify.rs  github.rs  target.rs  tests.rs
crates/elda-install/: Cargo.toml
crates/elda-install/src/: archive_state.rs  cached_archive.rs  conffile.rs  downgrade.rs  error.rs  fsops.rs  install_tx.rs  journal.rs  lib.rs  remove_tx.rs  snapshot.rs  tests.rs  verify.rs
crates/elda-install/src/rollback/: mod.rs  plan.rs  restore.rs
crates/elda-install/src/system_backend/: metadata.rs  mod.rs  paths.rs  profile_state.rs  provider_assets.rs  status.rs  trigger_inspect.rs  trigger_model.rs  triggers.rs
crates/elda-recipe/: Cargo.toml
crates/elda-recipe/src/: check.rs  error.rs  format.rs  lib.rs  model.rs  validate.rs
crates/elda-recipe/src/check/: tests.rs
crates/elda-recipe/src/format/: tests.rs
crates/elda-recipe/src/import/: detect.rs  detected.rs  legacy.rs  metadata.rs  mod.rs  model.rs  overwrite_tests.rs  release_format_tests.rs  release_options.rs  release_sidecars.rs  release_target.rs  release_tests.rs  render.rs  snapshot.rs  strategy.rs  tests.rs  workflow.rs  workflow_render.rs  (+1 more)
crates/elda-repo/: Cargo.toml
crates/elda-repo/src/: error.rs  lib.rs  model.rs  store.rs
(+214 files in other folders)
