[package]
name = "elda-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
elda-build = { path = "../elda-build" }
elda-db = { path = "../elda-db" }
elda-install = { path = "../elda-install" }
elda-recipe = { path = "../elda-recipe" }
elda-repo = { path = "../elda-repo" }
elda-types = { path = "../elda-types" }
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
tempfile.workspace = true

[lints]
workspace = true
