[package]
name = "elda-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anstyle = "1.0.14"
base64.workspace = true
ed25519-dalek.workspace = true
elda-appimage = { path = "../elda-appimage" }
elda-build = { path = "../elda-build" }
elda-db = { path = "../elda-db" }
elda-git = { path = "../elda-git" }
elda-install = { path = "../elda-install" }
elda-recipe = { path = "../elda-recipe" }
elda-repo = { path = "../elda-repo" }
elda-types = { path = "../elda-types" }
pubgrub.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
spinners = "4.2.0"
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
ureq.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
