[package]
name = "elda-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
elda-types = { path = "../elda-types" }
fs4.workspace = true
rusqlite.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
