[package]
name = "elda-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
elda-types = { path = "../elda-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true

[lints]
workspace = true
